--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,10 +20,19 @@
         </activity>
         <activity
             android:name=".UserProfileActivity"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".HomeActivity">
+
+        </activity>
         <activity
             android:name=".RegisterActivity"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+        <activity
+            android:name=".GuildListActivity"
+            android:parentActivityName=".HomeActivity">
+        </activity>
     </application>
 
 </manifest>
