--- a/IzvorniKod/GuildBuildService/JDBC/.classpath
+++ b/IzvorniKod/GuildBuildService/JDBC/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/ivan_/Git/Amigosi/IzvorniKod/GuildBuildService/JDBC/lib/mysql-connector-java-5.1.45-bin.jar"/>
+	<classpathentry kind="lib" path="D:/Karlo/FER/5. semestar/Oblikovanje programske potpore/Amigosi/IzvorniKod/GuildBuildService/JDBC/lib/mysql-connector-java-5.1.45-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
