--- a/IzvorniKod/GuildBuildService/JDBC/.classpath
+++ b/IzvorniKod/GuildBuildService/JDBC/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="D:/Karlo/FER/5. semestar/Oblikovanje programske potpore/Amigosi/IzvorniKod/GuildBuildService/JDBC/lib/mysql-connector-java-5.1.45-bin.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
