--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hr.fer.amigosi.guildbuild">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -33,7 +36,12 @@
         <activity
             android:name=".MessagesActivity"
             android:parentActivityName=".UserProfileActivity" />
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".EditProfileActivity" />
+        <activity android:name=".AdministratorProfileActivity" />
+        <activity android:name=".AdministratorViewUserReqActivity" />
+        <activity android:name=".AdministratorDelAccActivity" />
+        <activity android:name=".AdministratorDelGuildActivity" />
+        <activity android:name=".AdministratorAddGameActivity"></activity>
     </application>
 
 </manifest>
