--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         <activity android:name=".AdministratorDelAccActivity" />
         <activity android:name=".AdministratorDelGuildActivity" />
         <activity android:name=".AdministratorAddGameActivity" />
+        <activity android:name=".AdministratorDelClassActivity"></activity>
+        <activity android:name=".AdministratorAddClassActivity"></activity>
         <activity android:name=".AddNewCharacterActivity"></activity>
     </application>
 
