--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         <activity android:name=".AdministratorDelAccActivity" />
         <activity android:name=".AdministratorDelGuildActivity" />
         <activity android:name=".AdministratorAddGameActivity" />
-        <activity android:name=".AddNewCharacterActivity"></activity>
+        <activity android:name=".AddNewCharacterActivity" />
+        <activity android:name=".MyGuildActivity"></activity>
     </application>
 
 </manifest>
