Removed some hardcoded querries, added the option to add a guild, changed the way user is changing his/hers description, added some activities...

--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -37,13 +37,14 @@
             android:name=".MessagesActivity"
             android:parentActivityName=".UserProfileActivity" />
         <activity android:name=".EditProfileActivity" />
+        <activity android:name=".GuildCreateActivity" />
         <activity android:name=".AdministratorProfileActivity" />
         <activity android:name=".AdministratorViewUserReqActivity" />
         <activity android:name=".AdministratorDelAccActivity" />
         <activity android:name=".AdministratorDelGuildActivity" />
         <activity android:name=".AdministratorAddGameActivity" />
         <activity android:name=".AddNewCharacterActivity" />
-        <activity android:name=".MyGuildActivity"></activity>
+        <activity android:name=".GuildDetailsActivity"></activity>
     </application>
 
 </manifest>
