Fixed ConcedeActivity, added finish(); to FormApplicationActivity so it doesn't show up when activities are removed from the Activity stack. Added button for seeing user requests to join a Guild. It is GONE if the current user is only a member.

--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:parentActivityName=".UserProfileActivity" />
         <activity
             android:name=".EditProfileActivity"
-            android:parentActivityName=".UserProfileActivity"/>
+            android:parentActivityName=".UserProfileActivity" />
         <activity android:name=".GuildCreateActivity" />
         <activity android:name=".AdministratorProfileActivity" />
         <activity android:name=".AdministratorViewUserReqActivity" />
@@ -49,13 +49,14 @@
         <activity android:name=".AdministratorDelClassActivity" />
         <activity
             android:name=".AddNewCharacterActivity"
-            android:parentActivityName=".EditProfileActivity"/>
+            android:parentActivityName=".EditProfileActivity" />
         <activity android:name=".GuildDetailsActivity" />
         <activity android:name=".SendMessageActivity" />
         <activity android:name=".GuildMembersActivity" />
         <activity android:name=".FormApplicationActivity" />
         <activity android:name=".ConcedeActivity" />
-        <activity android:name=".MyCharactersActivity"></activity>
+        <activity android:name=".MyCharactersActivity" />
+        <activity android:name=".UserRequestsForGuild"></activity>
     </application>
 
 </manifest>
