Added event,goal and subgoal adding methods

--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -91,7 +91,10 @@
         <activity
             android:name=".UserRequestsForGuild"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".Promote_demoteActivity"></activity>
+        <activity android:name=".Promote_demoteActivity" />
+        <activity android:name=".AddEventActivity" />
+        <activity android:name=".AddGoalActivity" />
+        <activity android:name=".AddSubgoalActivity"></activity>
     </application>
 
 </manifest>
