--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -94,7 +94,8 @@
         <activity android:name=".Promote_demoteActivity" />
         <activity android:name=".AddEventActivity" />
         <activity android:name=".AddGoalActivity" />
-        <activity android:name=".AddSubgoalActivity"></activity>
+        <activity android:name=".AddSubgoalActivity" />
+        <activity android:name=".VoteActivity"></activity>
     </application>
 
 </manifest>
