Added event joining and event visible on profile

--- a/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/AndroidManifest.xml
@@ -98,7 +98,8 @@
         <activity android:name=".VoteActivity" />
         <activity android:name=".EventsListActivity" />
         <activity android:name=".GoalsListActivity" />
-        <activity android:name=".SubgoalsListActivity"></activity>
+        <activity android:name=".SubgoalsListActivity" />
+        <activity android:name=".MyEventsActivity"></activity>
     </application>
 
 </manifest>
